--- a/dapi/spec/fixtures/questions.yml
+++ b/dapi/spec/fixtures/questions.yml
@@ -5,56 +5,48 @@
 radio:
   uuid: QuestionRadio
   kind: radio
-  title: 問題1
-  content: 問題1本文
-  required: false
-  answer_content: 問題1正解
-  answer_description: 問題1解説
+  title: 性別
+  content: 性別を選択してください
+  required: true
 
 numeric:
   uuid: QuestionNumeric
   kind: numeric
-  title: 問題2
-  content: 問題2本文
+  title: 年齢
+  content: 年齢を選択してください
   required: true
-  answer_content: 問題2正解
-  answer_description: 問題2解説
 
 select:
   uuid: QuestionSelect
   kind: select
-  title: 問題2
-  content: 問題2本文
+  title: 選択問題
+  content: 選択肢から選択してください
   required: true
-  answer_content: 問題2正解
-  answer_description: 問題2解説
+  answer_content: 選択肢問題正解
+  answer_description: 選択肢問題の正解です
 
 check:
   uuid: QuestionCheck
   kind: check
-  title: 問題3
-  content: 問題3本文
-  required: true
-  answer_content: 問題3正解
-  answer_description: 問題3解説
+  title: チェックボックス
+  content: チェックボックスから選択してください
+  required: false
 
 text:
   uuid: QuestionText
   kind: text
-  title: 問題4
-  content: 問題4本文
+  title: テキスト問題
+  content: テキスト問題です
   required: false
-  answer_content: 問題4正解
-  answer_description: 問題4解説
+  answer_content: テキスト問題正解
+  answer_description: テキスト問題の正解です
 
 textarea:
   uuid: QuestionTextarea
   kind: textarea
-  title: 問題5
-  content: 問題5本文
+  title: テキストエリア
+  content: テキストエリアです
   required: false
-  answer_content: 問題5正解
-  answer_description: 問題5解説
 
 # nil要素動作確認用
 nullable_q1:
@@ -72,63 +64,75 @@ nullable_q2-2:
   kind: text
   required: false
 
+# 異常系の確認用データ
+# 設問と選択肢が矛盾している
+incons_question:
+  uuid: QuestionInconsistency
+  kind: select
+  title: 設問と選択肢が矛盾している
+  content: 設問と選択肢が矛盾している
+  required: true
+  answer_content: 設問と選択肢が矛盾している
+  answer_description: 設問と選択肢が矛盾している
+
+  
 # 養命酒
-youmei_shu_question1:
-  uuid: YoumeiShuQuestion1
+yomei_shu_question1:
+  uuid: YomeiShuQuestion1
   kind: radio
   title: 性別をお答えください。
   required: true
 
-youmei_shu_question2:
-  uuid: YoumeiShuQuestion2
+yomei_shu_question2:
+  uuid: YomeiShuQuestion2
   kind: numeric
   title: 年齢をお答えください。
   required: true
 
-youmei_shu_question3:
-  uuid: YoumeiShuQuestion3
+yomei_shu_question3:
+  uuid: YomeiShuQuestion3
   kind: select
   title: このCMをご覧になって「ハーブの恵み」の香りに興味を持たれましたか？
   required: true
 
-youmei_shu_question4:
-  uuid: YoumeiShuQuestion4
+yomei_shu_question4:
+  uuid: YomeiShuQuestion4
   kind: select
   title: このCMをご覧になって「ハーブの恵み」を飲んでみたいと思いましたか？
   required: true
 
-youmei_shu_question5:
-  uuid: YoumeiShuQuestion5
+yomei_shu_question5:
+  uuid: YomeiShuQuestion5
   kind: select
   title: このCMをご覧になって「ハーブの恵み」を買ってみたいと思いましたか？
   required: true
 
-youmei_shu_question6:
-  uuid: YoumeiShuQuestion6
+yomei_shu_question6:
+  uuid: YomeiShuQuestion6
   kind: select
   title: 「ハーブの恵み スパークリング」を以前からご存知でしたか？
   required: true
 
-youmei_shu_question7:
-  uuid: YoumeiShuQuestion7
+yomei_shu_question7:
+  uuid: YomeiShuQuestion7
   kind: select
   title: 「ハーブの恵み スパークリング」を飲んだことがありますか？
   required: true
 
-youmei_shu_question8:
-  uuid: YoumeiShuQuestion8
+yomei_shu_question8:
+  uuid: YomeiShuQuestion8
   kind: select
   title: 「ハーブの恵み」を以前からご存知でしたか？
   required: true
 
-youmei_shu_question9:
-  uuid: YoumeiShuQuestion9
+yomei_shu_question9:
+  uuid: YomeiShuQuestion9
   kind: select
   title: 「ハーブの恵み」を飲んだことがありますか？
   required: true
 
-youmei_shu_question10:
-  uuid: YoumeiShuQuestion10
+yomei_shu_question10:
+  uuid: YomeiShuQuestion10
   kind: select
   title: 最後に今回の動画を再生したきっかけを教えてください。
   required: true
