--- a/dapi/test/fixtures/campaigns.yml
+++ b/dapi/test/fixtures/campaigns.yml
@@ -10,67 +10,13 @@ success_confirm:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
+  movie: /video/yomeishu.mov
   thumbnail: /images/poster-to.jpg
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
   second_picture: /images/poster-to.jpg
   banner_title: banner1
   second_point: 10
-  client_url: http://client.com
-
-# キャンペーンが入稿前のデータ
-status0:
-  mid: CampaignStatus0
-  enq_id: EnqStatus1
-  status: 0
-  platform: gree
-  point: 20
-  opening_at: 2100-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: /images/poster-to.jpg
-  message: キャンペーン2メッセージ
-  conversion_tag: cnvtag2
-  second_picture: /images/poster-to.jpg
-  banner_title: banner2
-  second_point: 20
-  client_url: http://client.com
-
-# キャンペーンが終了時のデータ
-status9:
-  mid: CampaignStatus9
-  enq_id: EnqStatus1
-  status: 9
-  platform: mixi
-  point: 30
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: /images/poster-to.jpg
-  message: キャンペーン3メッセージ
-  conversion_tag: cnvtag3
-  second_picture: /images/poster-to.jpg
-  banner_title: banner3
-  second_point: 30
-  client_url: http://client.com
-
-# キャンペーンが終了日時を過ぎていた時のデータ
-closed:
-  mid: CampaignClosed
-  enq_id: EnqStatus1
-  status: 1
-  platform: gree
-  point: 40
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2012-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
-  thumbnail: /images/poster-to.jpg
-  message: キャンペーン4メッセージ
-  conversion_tag: cnvtag4
-  second_picture: /images/poster-to.jpg
-  banner_title: banner4
-  second_point: 40
   client_url: http://client.com
 
 # nil動作確認用のデータ
@@ -91,7 +37,7 @@ first_page_null:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: http://demo.sunbi.co.jp/nci/video/long.mp4
+  movie: /video/yomeishu.mov
   thumbnail: /images/poster-to.jpg
   message: キャンペーンメッセージ
   conversion_tag: cnvtag1
@@ -101,22 +47,89 @@ first_page_null:
   client_url: http://client.com
 
 # キャンペーンの状態が入稿前
+camp_status0:
+  mid: CampaignStatus0CampaignID
+  enq_id: CampaignStatus0EnqID
+  status: 0
+  platform: gree
+  point: 20
+  opening_at: 2100-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: /video/yomeishu.mov
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーン2メッセージ
+  conversion_tag: cnvtag2
+  second_picture: /images/poster-to.jpg
+  banner_title: banner2
+  second_point: 20
+  client_url: http://client.com
 
+# キャンペーンが終了
 # キャンペーンの状態が終了
+camp_status9:
+  mid: CampaignStatus9CampaignID
+  enq_id: CampaignClosedEnqID
+  status: 9
+  platform: mixi
+  point: 30
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: /video/yomeishu.mov
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーン3メッセージ
+  conversion_tag: cnvtag3
+  second_picture: /images/poster-to.jpg
+  banner_title: banner3
+  second_point: 30
+  client_url: http://client.com
+
+# キャンペーンが終了日時を過ぎている
+camp_closed:
+  mid: CampaignClosedCampaignID
+  enq_id: CampaignClosedEnqID
+  status: 1
+  platform: gree
+  point: 40
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2012-1-1 0:0:0
+  movie: /video/yomeishu.mov
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーン4メッセージ
+  conversion_tag: cnvtag4
+  second_picture: /images/poster-to.jpg
+  banner_title: banner4
+  second_point: 40
+  client_url: http://client.com
 
 # 設問と選択肢が矛盾している
+incons_question:
+  mid: InconsistencyQuestionCampaignID
+  enq_id: InconsistencyQuestionEnqID
+  status: 1
+  platform: gree
+  point: 40
+  opening_at: 2000-1-1 0:0:0
+  closing_at: 2012-1-1 0:0:0
+  movie: /video/yomeishu.mov
+  thumbnail: /images/poster-to.jpg
+  message: キャンペーン4メッセージ
+  conversion_tag: cnvtag4
+  second_picture: /images/poster-to.jpg
+  banner_title: banner4
+  second_point: 40
+  client_url: http://client.com
 
 
 # 養命酒
-youmei_shu:
-  mid: YoumeiShuCampaignID
-  enq_id: YoumeiShuEnqID
+yomei_shu:
+  mid: YomeiShuCampaignID
+  enq_id: YomeiShuEnqID
   status: 1
   platform: mixi
   point: 13
   opening_at: 2012-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
+  movie: /video/yomeishu.mov
   client_url: http://cdn.poncan.jp
   
   
