--- a/dapi/test/fixtures/campaigns.yml
+++ b/dapi/test/fixtures/campaigns.yml
@@ -17,7 +17,7 @@ success_confirm:
   second_picture: /images/creative-sp.jpg
   banner_title: banner1
   second_point: 10
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 # nil動作確認用のデータ
 nullable:
@@ -44,7 +44,7 @@ first_page_null:
   second_picture: /images/creative-sp.jpg
   banner_title: banner1
   second_point: 10
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 # キャンペーンの状態が入稿前
 camp_status0:
@@ -62,7 +62,7 @@ camp_status0:
   second_picture: /images/creative-sp.jpg
   banner_title: banner2
   second_point: 20
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 # キャンペーンが終了
 # キャンペーンの状態が終了
@@ -81,7 +81,7 @@ camp_status9:
   second_picture: /images/creative-sp.jpg
   banner_title: banner3
   second_point: 30
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 # キャンペーンが終了日時を過ぎている
 camp_closed:
@@ -99,7 +99,7 @@ camp_closed:
   second_picture: /images/creative-sp.jpg
   banner_title: banner4
   second_point: 40
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 # 設問と選択肢が矛盾している
 incons_question:
@@ -117,7 +117,7 @@ incons_question:
   second_picture: /images/creative-sp.jpg
   banner_title: banner4
   second_point: 40
-  client_url: http://client.com
+  client_url: http://cdn.poncan.jp
 
 
 # 養命酒
