--- a/spec/fixtures/campaigns.yml
+++ b/spec/fixtures/campaigns.yml
@@ -130,6 +130,19 @@ yomei_shu:
   opening_at: 2012-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
   movie: /video/yomeishu.mov
-  client_url: http://cdn.poncan.jp
+  client_url: http://www.yomeishu.co.jp/megumi/kaorisu
+  
+
+# プラスワン
+plus_one:
+  mid: PlusOneCampaignID
+  enq_id: PulusOneEnqID
+  status: 1
+  platform: mixi
+  point: 1
+  opening_at: 2012-1-1 0:0:0
+  closing_at: 2100-1-1 0:0:0
+  movie: /video/yomeishu.mov
+  client_url: http://www.yomeishu.co.jp/megumi/kaorisu
   
   
