--- a/test/fixtures/enq_faces.yml
+++ b/test/fixtures/enq_faces.yml
@@ -122,12 +122,20 @@ incons_question_PC:
 
 
 # 養命酒
-yomei_shu:
-  uuid: YomeiShuEnqFaceID
+yomei_shu_SP:
+  uuid: YomeiShuSPEnqFaceID
+  enq_id: YomeiShuEnqID
+  face: SP
+  first_page_id: YomeiShuEnqPage1
+  wait_until: 30
+  title: 動画キャンペーン
+ 
+yomei_shu_PC:
+  uuid: YomeiShuPCEnqFaceID
   enq_id: YomeiShuEnqID
   face: PC
   first_page_id: YomeiShuEnqPage1
   wait_until: 30
   title: 動画キャンペーン
  
-  
+ 
